--- a/src/components/style.css
+++ b/src/components/style.css
@@ -231,10 +231,10 @@
 .slidercomponent{
     text-align: center;
    margin-top: 0px;
-   border:solid;
+   border:none;
    border-radius: 8px;
    padding: 15px;
-   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.7);
    border-width: 1px;
 }
 .slidertitle{
@@ -307,32 +307,27 @@ input[type=range] {
     justify-content: center;
 }
 
-button {
-    user-select: none;
-
-}
 
 .menubuttons{
     color: black;
     border:none;
     background-color: transparent;
-    margin: 0px 0px;
+    border-radius: 5px;
+    margin: 0px 5px;
     font-weight: 600;
-    border-right: solid;
-    border-left: solid;
-    border-color: rgb(207, 202, 202);
-    
+    border-color: black;
     border-width: 0.1px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.6);
 }
 
 .menubuttons:hover{
     background-color: rgb(207, 202, 202);
 }
-
+/*
 .menubuttons:not(:last-child) {
     border-right: none !important
   }
-
+*/
 #startnodebutton{
 
 
@@ -368,18 +363,19 @@ button {
 }
 
 .info-container{
-    border: solid;
+    border: none;
     border-width: 1px;
     border-color: black;
     border-radius: 5px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .75);
     transition: 0.3s;
     padding: 15px;
     text-align: justify;
 }
+/*
 .info-container:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
+  }*/
 
 .main-col-1{
     flex: 25%;
@@ -405,6 +401,109 @@ body {
     font-family: 'Montserrat' !important;
     user-select: none;
 }
+
+
+.checkbox-wrapper-24 {
+    margin-top:10px;
+    margin-bottom:10px;
+}
+
+  .checkbox-wrapper-24 .checkbox {
+    display: table-cell;
+    width: 100%;
+    height: 100%;
+    vertical-align: middle;
+    text-align: center;
+  }
+
+  .checkbox-wrapper-24 label {
+    display: inline-block;
+    color: #333;
+    cursor: pointer;
+    position: relative;
+    font-weight: 600;
+  }
+  .checkbox-wrapper-24 label span {
+    display: inline-block;
+    position: relative;
+    background-color: transparent;
+    width: 25px;
+    height: 25px;
+    transform-origin: center;
+    border: 2px solid #333;
+    border-radius: 50%;
+    vertical-align: middle;
+    margin-right: 10px;
+    transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78, -1.22, 0.17, 1.89);
+  }
+  .checkbox-wrapper-24 label span:before {
+    content: "";
+    width: 0px;
+    height: 2px;
+    border-radius: 2px;
+    background: #333;
+    position: absolute;
+    transform: rotate(45deg);
+    top: 11px;
+    left: 7px;
+    transition: width 50ms ease 50ms;
+    transform-origin: 0% 0%;
+  }
+  .checkbox-wrapper-24 label span:after {
+    content: "";
+    width: 0;
+    height: 2px;
+    border-radius: 2px;
+    background: #333;
+    position: absolute;
+    transform: rotate(305deg);
+    top: 14px;
+    left: 8px;
+    transition: width 50ms ease;
+    transform-origin: 0% 0%;
+  }
+  .checkbox-wrapper-24 label:hover span:before {
+    width: 5px;
+    transition: width 100ms ease;
+  }
+  .checkbox-wrapper-24 label:hover span:after {
+    width: 10px;
+    transition: width 150ms ease 100ms;
+  }
+
+  .checkbox-wrapper-24 input[type=checkbox] {
+    display: none;
+  }
+  .checkbox-wrapper-24 input[type=checkbox]:checked + label span {
+    background-color: #333;
+    transform: scale(1.25);
+  }
+  .checkbox-wrapper-24 input[type=checkbox]:checked + label span:after {
+    width: 10px;
+    background: #fff;
+    transition: width 150ms ease 100ms;
+  }
+  .checkbox-wrapper-24 input[type=checkbox]:checked + label span:before {
+    width: 5px;
+    background: #fff;
+    transition: width 150ms ease 100ms;
+  }
+  .checkbox-wrapper-24 input[type=checkbox]:checked + label:hover span {
+    background-color: #333;
+    transform: scale(1.25);
+  }
+  .checkbox-wrapper-24 input[type=checkbox]:checked + label:hover span:after {
+    width: 10px;
+    background: #fff;
+    transition: width 150ms ease 100ms;
+  }
+  .checkbox-wrapper-24 input[type=checkbox]:checked + label:hover span:before {
+    width: 5px;
+    background: #fff;
+    transition: width 150ms ease 100ms;
+  }
+
+
 
 
 
