--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,6 +1,15 @@
 
 
 
+.nav-link.active.visbtn{
+    border-radius: 5px;
+}
+.nav-link.active.visbtn.true{
+    background-color: red;
+}
+.nav-link.active.visbtn.false{
+    background-color: rgb(61, 180, 61);
+}
 
 
 
@@ -205,6 +214,7 @@
 }
 .tile.wall{
     background-color: white;
+    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="currentColor" viewBox="0 0 16 16"><path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" /><path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" /></svg>');
     animation-name: anim_wall;
     animation-duration: .5s;
     border-color: #212529 !important;
@@ -214,6 +224,10 @@
 .tile.start{
     background-color: rgb(158, 191, 86) !important;
     /*background-color: white !important;*/
+    background-image: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" width="80%" height="80%" fill="currentColor" viewBox="0 0 16 16"><path d="M12.5 4a.5.5 0 0 0-1 0v3.248L5.233 3.612C4.693 3.3 4 3.678 4 4.308v7.384c0 .63.692 1.01 1.233.697L11.5 8.753V12a.5.5 0 0 0 1 0z" /></svg>') ;
+    background-size: 85%;
+    background-repeat: no-repeat;
+    background-position: center;
     border: none !important;
     animation-name: anim_start;
     animation-duration: .5s;
@@ -222,6 +236,10 @@
 
 .tile.finish{
     background-color: rgb(180,38,44) !important;
+    background-image: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" width="10%" height="10%" fill="currentColor" viewBox="0 0 16 16"><path d="M2.5.5A.5.5 0 0 1 3 0h10a.5.5 0 0 1 .5.5q0 .807-.034 1.536a3 3 0 1 1-1.133 5.89c-.79 1.865-1.878 2.777-2.833 3.011v2.173l1.425.356c.194.048.377.135.537.255L13.3 15.1a.5.5 0 0 1-.3.9H3a.5.5 0 0 1-.3-.9l1.838-1.379c.16-.12.343-.207.537-.255L6.5 13.11v-2.173c-.955-.234-2.043-1.146-2.833-3.012a3 3 0 1 1-1.132-5.89A33 33 0 0 1 2.5.5m.099 2.54a2 2 0 0 0 .72 3.935c-.333-1.05-.588-2.346-.72-3.935m10.083 3.935a2 2 0 0 0 .72-3.935c-.133 1.59-.388 2.885-.72 3.935" /></svg>');
+    background-size: 58%;
+    background-repeat: no-repeat;
+    background-position: center;
     border:none !important;
     animation-name: anim_finish;
     animation-duration: .5s;
@@ -371,7 +389,7 @@ input[type=range] {
 
 #mainbody{
     display: flex;
-    margin-top: 56px;
+    margin-top: 75px;
     padding-top: 1px;
     align-content: center;
 }
@@ -405,9 +423,6 @@ input[type=range] {
     padding-right: 20px;
 }
 
-li+li {
-    /*margin-top: 10px;*/
-}
 
 body {
     content: "";
