--- a/src/components/style.css
+++ b/src/components/style.css
@@ -32,6 +32,7 @@
     align-content: center;
     text-align: center;
     white-space: nowrap;
+    color: white
 
 }
 
@@ -130,7 +131,14 @@
 }
 
 .dragging._2{
-    cursor: url(../assets/skip-end-circle-fill-big.svg) 10 10, auto !important;
+    /* cursor: url(../assets/skip-end-circle-fill-big.svg) 10 10, auto !important; */
+    cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" class="bi bi-skip-end-fill" viewBox="0 0 16 16"><path d="M12.5 4a.5.5 0 0 0-1 0v3.248L5.233 3.612C4.693 3.3 4 3.678 4 4.308v7.384c0 .63.692 1.01 1.233.697L11.5 8.753V12a.5.5 0 0 0 1 0z"/></svg>') 10 10, auto !important;
+}
+
+.dragging._3{
+    /*cursor: url(../assets/skip-end-circle-fill-big.svg) 10 10, auto !important;   */
+    cursor: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" width="19px" height="19px" fill="currentColor" viewBox="0 0 16 16"><path d="M2.5.5A.5.5 0 0 1 3 0h10a.5.5 0 0 1 .5.5q0 .807-.034 1.536a3 3 0 1 1-1.133 5.89c-.79 1.865-1.878 2.777-2.833 3.011v2.173l1.425.356c.194.048.377.135.537.255L13.3 15.1a.5.5 0 0 1-.3.9H3a.5.5 0 0 1-.3-.9l1.838-1.379c.16-.12.343-.207.537-.255L6.5 13.11v-2.173c-.955-.234-2.043-1.146-2.833-3.012a3 3 0 1 1-1.132-5.89A33 33 0 0 1 2.5.5m.099 2.54a2 2 0 0 0 .72 3.935c-.333-1.05-.588-2.346-.72-3.935m10.083 3.935a2 2 0 0 0 .72-3.935c-.133 1.59-.388 2.885-.72 3.935" /></svg>') 5 5, auto !important;
+    
 }
 
 .grab {
@@ -203,9 +211,6 @@
 .tile.normal{
     animation-name: anim_normal;
     animation-duration: .5s;
-    /*background-color: #9e9e9e;*/
-    /*background-color: rgb(166,113,83);*/
-    /*background-color: rgb(191,161,143);*/
     background-color: #212529;
     border:none;
     border-width: 2px;
@@ -246,7 +251,7 @@
 }
 
 .tile.visited{
-    background-color: rgb(104, 49, 29);
+    background-color: rgb(155, 86, 60);
     animation-name: anim_visited;
     animation-duration: 0.5s;
     border: none;
@@ -254,8 +259,7 @@
 }
 
 .tile.routenode {
-    /*background-color: rgb(170, 191,189);*/
-    background: blueviolet;
+    background-color: rgb(60, 218, 55);
     animation-name: anim_routenode;
     animation-duration: 1s;
     border:none
@@ -315,7 +319,7 @@
 input[type=range] {
     -webkit-appearance: none;
     appearance: none;
-    background-color: rgb(104, 49, 29);
+    background-color: #212529;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -329,19 +333,18 @@ input[type=range] {
     cursor: row-resize;
   }
   input[type=range][step] {
-    background-color: rgb(191,161,143);
-    /*background-image: repeating-linear-gradient(to right, red, green, calc(12.5% - 1px), #05051a 12.5%);*/
+    background-color: #21252949;
 
   }
   input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
     width: 0;
-    box-shadow: -20rem 0 0 20rem rgb(104, 49, 29);
+    box-shadow: -20rem 0 0 20rem #212529;
   }
   input[type=range]::-moz-range-thumb {
     border: none;
     width: 0;
-    box-shadow: -20rem 0 0 20rem rgb(104, 49, 29);
+    box-shadow: -20rem 0 0 20rem #21252949;
   }
 
 .buttonrow{
@@ -404,10 +407,6 @@ input[type=range] {
     padding: 15px;
     text-align: justify;
 }
-/*
-.info-container:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }*/
 
 .main-col-1{
     flex: 25%;
