--- a/src/components/style.css
+++ b/src/components/style.css
@@ -53,7 +53,7 @@
 
 [class^="route_right _"][class$=" routepath"], [class^="route_bottom _"][class$=" routepath"]{
     /*background-color: rgb(170, 191,189);*/
-    background-color: blueviolet;
+    background-color: rgb(60, 218, 55);
 }
 
 .route_right, .route_bottom{
