--- a/src/components/style.css
+++ b/src/components/style.css
@@ -11,7 +11,13 @@
     background-color: rgb(61, 180, 61);
 }
 
+.me-auto {
+    margin: auto !important
+}
 
+.nav-item {
+    margin-left:25px;
+}
 
 .tile {
     min-height: 30px !important;
@@ -34,7 +40,7 @@
     white-space: nowrap;
     color: white
 
-}
+}   
 
 .tilewrapper{
     min-height: 30px !important;
@@ -280,6 +286,7 @@
 .slidercomponent{
     text-align: center;
    margin-top: 0px;
+   margin-bottom: 20px;
    border:none;
    border-radius: 8px;
    padding: 15px;
@@ -409,12 +416,13 @@ input[type=range] {
 }
 
 .main-col-1{
-    flex: 25%;
+    flex: 15%;
     padding-left: 20px;
     padding-top: 20px;
 }
 .main-col-2{
-    flex: 60%;
+    /*flex: 60%;*/
+    flex: 1;
 }
 .main-col-3{
     flex: 15%;
