--- a/src/components/style.css
+++ b/src/components/style.css
@@ -387,7 +387,8 @@ input[type=range] {
 }
 
 #maingrid{
-    margin:auto;
+    margin-left: 20px;
+    margin-right: 20px;
     text-align: center;
     align-content: center;
     justify-content: center;
@@ -399,7 +400,7 @@ input[type=range] {
 
 #mainbody{
     display: flex;
-    margin-top: 75px;
+    margin-top: 100px;
     padding-top: 1px;
     align-content: center;
 }
@@ -418,7 +419,9 @@ input[type=range] {
 .main-col-1{
     flex: 15%;
     padding-left: 20px;
-    padding-top: 20px;
+    padding-top: 10px;
+    min-width: 260px;
+    max-width: 350px;
 }
 .main-col-2{
     /*flex: 60%;*/
@@ -426,8 +429,9 @@ input[type=range] {
 }
 .main-col-3{
     flex: 15%;
-    padding-top: 20px;
+    padding-top: 10px;
     padding-right: 20px;
+    max-width: 180px;
 }
 
 
