--- a/src/components/style.css
+++ b/src/components/style.css
@@ -390,6 +390,7 @@ input[type=range]::-moz-range-thumb {
     transition: 0.3s;
     padding: 15px;
     text-align: justify;
+    margin-bottom: 50px;
 }
 
 .main-col-1{
